Fix varie e completamento

--- a/src/assets/mails/approve.html
+++ b/src/assets/mails/approve.html
@@ -152,16 +152,16 @@
               </tr>
               <tr>
                 <td style="padding-left: 24px; padding-right: 24px; text-align: center; font-size: 12px; color: #475569">
-                  <p style="margin: 0 0 16px; text-transform: uppercase">
+                  <!--<p style="margin: 0 0 16px; text-transform: uppercase">
                     Powered by Maizzle
-                  </p>
+                  </p>-->
                   <p style="margin: 0; font-style: italic">
                     Copyright © <script>
                       document.write(/\d{4}/.exec(Date())[0])
                     </script> Duca Sergio. All rights reserved.
                   </p>
                   <p style="cursor: default">
-                    <a href="https://www.ducasergio.it/docs" class="hover-important-text-decoration-underline" style="font-weight: 500; color: #6d28d9; text-decoration: none">Docs</a>
+                    <a href="https://www.ducasergio.it" class="hover-important-text-decoration-underline" style="font-weight: 500; color: #6d28d9; text-decoration: none">Web Site</a>
                     &bull;
                     <a href="https://github.com/sergiosessanta9" class="hover-important-text-decoration-underline" style="font-weight: 500; color: #6d28d9; text-decoration: none;">Github</a>
                     &bull;
